[tool.poetry]
name = "rock-texture-analyzer"
version = "0.1.0"
description = ""
authors = ["panhaoyu <panhaoyu.china@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
open3d = "^0.18.0"
numpy = "^2.2.1"
pandas = "^2.2.3"
scipy = "^1.14.1"
openpyxl = "^3.1.5"
more-itertools = "^10.5.0"
scikit-learn = "^1.6.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
opencv-python = "^4.10.0.84"
joblib = "^1.4.2"
tqdm = "^4.67.1"
pytest = "^8.3.4"
pypinyin = "^0.53.0"
sci-cache = "^0.1.4"
ezdxf = "^1.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
